# Magen

./: .dockerignore  .gitignore  BUILDING.md  Cargo.toml  Insomnia.json  LICENSE.txt  README.md  package-lock.json
.github/workflows/: build_server.yaml  deploy.yaml
app/: pubspec.yaml
app/ios/Runner/: GoogleService-Info.plist
app/lib/: main.dart
app/lib/utils/: api.dart  geo.dart
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner/: GoogleService-Info.plist
app/windows/flutter/: generated_plugin_registrant.cc
apps/: .dockerignore
apps/mobile/: README.md
apps/mobile/api/: .env.example  .gitignore  Dockerfile  README.md  db-compose.yaml  docker-compose.dev.yaml  docker-compose.yaml  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.json
apps/mobile/app/: .env.example  .eslintrc.js  .gitignore  README.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  prettier.config.js  pubspec.yaml  tailwind.config.js  tamagui.config.ts  tsconfig.json
apps/mobile/server/: package.json
apps/telegram-bot/: .dockerignore  .env.example  BUILDING.md  Dockerfile  README.md  compose.yaml  docker-compose.dev.yaml  package-lock.json  package.json  tsconfig.json
apps/telegram-bot/src/: EventQueue.ts  bot.ts  config.ts  log.ts  main.ts  utils.ts
apps/telegram_bot/: .dockerignore  Dockerfile  compose.yaml  docker-compose.prod.yaml  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
apps/telegram_bot/src/: EventQueue.ts  bot.ts  config.ts  main.ts  utils.ts
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.css  App.tsx  config.ts  main.tsx
core/: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yaml  install.sh
core/etc/: crontab
core/pikud/: Cargo.toml
core/pikud/examples/: usage.rs
core/pikud/src/: lib.rs
core/server/: Cargo.toml  config.toml
core/server/src/: main.rs  server.rs
magen_srv/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
magen_srv/etc/: crontab
magen_srv/magen_srv/: Cargo.toml
magen_srv/magen_srv/assets/: default_key.rsa
magen_srv/magen_srv/src/: main.rs
magen_srv/oref/: Cargo.toml
mobile/server/: tsconfig.json
mobile/server/src/: main.ts
scripts/: build.py  common.py  config.py  control.py  get_cities.py  get_data.py  get_geo.py  test.sh
server/: .env.example  package-lock.json  package.json
server/src/: config.ts  db.ts  db_connector.ts  firebase.ts  interfaces.ts  main.ts  ws.ts
srv/: Cargo.toml  install.sh
srv/pikud/: Cargo.toml
srv/server/: Cargo.toml
srv/server/assets/: default_cert.pem
srv/server/src/: main.rs  server.rs
ws_srv/: .env.example  cron_job.sh  docker-compose-initiate.yaml  docker-compose.yaml
ws_srv/oref-ws/: Cargo.toml  Cross.toml  README.md
(+117 files in other folders)
