[package]
name = "pikud"
version = "0.1.0"
edition = "2021"

[lib]
name = "pikud"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.5.0", features = ["v4"] }
