[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Websocket server for pikud haoref API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
futures-util = "0.3.28"
humantime = "2.1.0"
log = "0.4.20"
pikud = { path = "../pikud" }
pretty_env_logger = "0.5.0"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros"] }
tokio-stream = "0.1.14"
uuid = { version = "1.5.0", features = ["v4"] }
warp = { version = "0.3.6", features = ["tls"] }


