[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Websocket server for pikud haoref API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
humantime = "2.1.0"
log = "0.4.20"
pikud = { path = "../pikud" }
pretty_env_logger = "0.5.0"
serde_json = "1.0.108"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
axum = { version = "0.7.2", features = ["ws"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
tokio-stream = "0.1.14"
once_cell = "1.19.0"


